# ros_roomba

./: .gitignore  README.md  init.sh  reset.sh  run0.sh  run1.sh  run2.sh  run_vision.sh  tensorflow_1_X_object_detection_training_colab.ipynb
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/mr_control/: Goal.h  GoalRequest.h  GoalResponse.h
devel/lib/mr_control/: fake_loc  paths_follower
devel/lib/mr_path_recorder/: path_recorder
devel/lib/mr_roomba/: roomba
devel/lib/mr_teleop/: mr_teleop_node_cpp
devel/lib/pkgconfig/: mr_control.pc  mr_description.pc  mr_path_recorder.pc  mr_roomba.pc  mr_simulation.pc  mr_teleop.pc  mr_vision.pc
devel/lib/python2.7/dist-packages/mr_control/srv/: _Goal.py
devel/lib/python2.7/dist-packages/mr_teleop/: __init__.py
devel/lib/python2.7/dist-packages/mr_vision/: __init__.py
devel/share/common-lisp/ros/mr_control/srv/: Goal.lisp  _package.lisp  _package_Goal.lisp  mr_control-srv.asd
devel/share/gennodejs/ros/mr_control/srv/: Goal.js
devel/share/mr_control/cmake/: mr_control-msg-extras.cmake  mr_control-msg-paths.cmake  mr_controlConfig.cmake
devel/share/mr_description/cmake/: mr_descriptionConfig.cmake
devel/share/mr_path_recorder/cmake/: mr_path_recorderConfig.cmake
devel/share/mr_roomba/cmake/: mr_roombaConfig.cmake
devel/share/mr_simulation/cmake/: mr_simulationConfig.cmake
devel/share/mr_teleop/cmake/: mr_teleopConfig.cmake
devel/share/mr_vision/cmake/: mr_visionConfig.cmake
devel/share/roseus/ros/mr_control/: manifest.l
devel/share/roseus/ros/mr_control/srv/: Goal.l
src/mr_control/: CMakeLists.txt  package.xml
src/mr_control/include/mr_control/: csv_reader.hpp  csv_reader_abstract.hpp  paths_follower.hpp
src/mr_control/launch/: control.launch
src/mr_control/path/: path_to_follow.path
src/mr_control/rviz/: config.rviz
src/mr_control/src/: csv_reader.cpp  fake_localization.cpp  paths_follower.cpp
src/mr_description/: CMakeLists.txt  package.xml
src/mr_description/config/: PIDs.yaml  controllers.yaml
src/mr_description/launch/: display.launch  robot.launch
src/mr_description/rviz/: urdf.rviz
src/mr_description/urdf/: gazebo.xacro  mr.urdf  mr.xacro  sensors.xacro
src/mr_path_recorder/: CMakeLists.txt  package.xml
src/mr_path_recorder/include/mr_path_recorder/: csv_writer.hpp  path_recorder.hpp
src/mr_path_recorder/src/: path_recorder.cpp
src/mr_roomba/: CMakeLists.txt  package.xml
src/mr_roomba/include/mr_roomba/: roomba.hpp
src/mr_roomba/launch/: roomba.launch
src/mr_roomba/rviz/: config.rviz
src/mr_roomba/src/: roomba.cpp
src/mr_simulation/: CMakeLists.txt  package.xml
src/mr_simulation/launch/: mr.launch
src/mr_simulation/scripts/: forward.sh  reset.bash  rotate.sh  round.sh  stop.sh
src/mr_simulation/worlds/: empty.world  street.world  walls.world
src/mr_teleop/: CMakeLists.txt  package.xml  setup.py
src/mr_teleop/include/mr_teleop/: control.hpp
src/mr_teleop/launch/: teleop.launch
src/mr_teleop/src/: control.cpp  control_node.cpp
src/mr_teleop/src/mr_teleop/: teleop_twist_keyboard.py
src/mr_vision/: CMakeLists.txt  package.xml  setup.py
src/mr_vision/launch/: vision.launch
src/mr_vision/src/mr_vision/: predict.py  vision.py
src/mr_vision/src/mr_vision/fine_tuned_model1/: frozen_inference_graph.pb  model.ckpt.data-00000-of-00001  model.ckpt.index  pipeline.config
src/mr_vision/src/mr_vision/fine_tuned_model1/saved_model/: saved_model.pb
src/mr_vision/src/mr_vision/fine_tuned_model2/: frozen_inference_graph.pb  label_map.pbtxt  model.ckpt.data-00000-of-00001  model.ckpt.index  pipeline.config
src/mr_vision/src/mr_vision/fine_tuned_model2/saved_model/: saved_model.pb
