<?xml version="1.0"?>
<package format="2">
  <name>mr_description</name>
  <version>0.0.0</version>
  <description>The mr_description package</description>

  <maintainer email="guillaume.beuzeboc@gmail.com">guillaume</maintainer>
  
  <license>GuillaumeBeuzeboc</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
