<?xml version="1.0"?>
<package format="2">
  <name>mr_simulation</name>
  <version>0.0.0</version>
  <description>The mr_simulation package</description>

  <maintainer email="guillaume.beuzeboc@gmail.com">guillaume</maintainer>

  <license>GuillaumeBeuzeboc</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  
</package>
