<?xml version="1.0"?>
<package format="2">
  <name>mr_vision</name>
  <version>0.0.0</version>
  <description>The mr_vision package</description>

  <maintainer email="guillaume.beuzeboc@gmail.com">GuillaumeBeuzeboc</maintainer>

  <license>GuillaumeBeuzeboc</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>rospkg</exec_depend>

</package>
